--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 MONGO_URL=mongodb+srv://evat:1uBRMP8ZUUO46mTO@evat.azavhw1.mongodb.net/EVAT?retryWrites=true&w=majority
 
 PORT=8000
+
+JWT_SECRET=@McQfTjWnZr4u7x!A%D*F-JaNdRgUkXp
+TOKEN_DURATION=30d
